--- a/app/src/main/res/layout/fragment_signature.xml
+++ b/app/src/main/res/layout/fragment_signature.xml
@@ -4,13 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.base.Signature">
+    tools:context=".ui.base.SignatureFragment"
+    android:background="#FFF">
 
 
-    <com.kyanogen.signatureview.SignatureView
-        android:id="@+id/signature_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
 
     <Button
         android:id="@+id/save_signature"
