--- a/app/src/main/res/layout/fragment_signature.xml
+++ b/app/src/main/res/layout/fragment_signature.xml
@@ -8,7 +8,10 @@
     android:background="#FFF">
 
 
-
+    <com.github.gcacace.signaturepad.views.SignaturePad
+        android:id="@+id/signature_pad"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <Button
         android:id="@+id/save_signature"
