--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -26,7 +26,7 @@
         android:textColor="#000"
         android:textSize="16sp"
         android:fontFamily="@font/notosans_bolditalic"
-        android:text="Your location"/>
+        android:text="@string/your_location"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
         android:textColor="#000"
         android:textSize="24sp"
         android:fontFamily="@font/notosans_bold"
-        android:text="New York, USA"/>
+        android:text="@string/new_york_usa"/>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -57,7 +57,110 @@
             app:cardBackgroundColor="#FF9F1C"
             android:elevation="12dp"
             android:layout_width="match_parent"
-            android:layout_height="160dp"/>
+            android:layout_height="160dp">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:text="@string/global"
+                    android:fontFamily="@font/notosans_bold"
+                    android:textSize="24sp"
+                    android:layout_gravity="end"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="16dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/cases"
+                            android:textSize="20sp"
+                            android:textColor="#000"
+                            android:fontFamily="@font/notosans_bold" />
+
+                        <TextView
+                            android:id="@+id/casesGlobal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text=""
+                            android:textSize="28sp"
+                            android:textColor="#f1f1f1"
+                            android:fontFamily="@font/notosans_bold" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/deaths"
+                            android:textSize="20sp"
+                            android:textColor="#000"
+                            android:fontFamily="@font/notosans_bold" />
+
+                        <TextView
+                            android:id="@+id/deathGlobal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text=""
+                            android:textSize="28sp"
+                            android:textColor="#f1f1f1"
+                            android:fontFamily="@font/notosans_bold" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/recovered"
+                            android:textSize="20sp"
+                            android:textColor="#000"
+                            android:fontFamily="@font/notosans_bold" />
+
+                        <TextView
+                            android:id="@+id/recoveredGlobal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text=""
+                            android:textSize="28sp"
+                            android:textColor="#f1f1f1"
+                            android:fontFamily="@font/notosans_bold" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </FrameLayout>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card2"
@@ -66,7 +169,114 @@
             android:elevation="12dp"
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
-            android:layout_height="160dp"/>
+            android:layout_height="160dp" >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="16dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Active:"
+                            android:textSize="20sp"
+                            android:textColor="#000"
+                            android:fontFamily="@font/notosans_bold" />
+
+                        <TextView
+                            android:id="@+id/activeGlobal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text=""
+                            android:textSize="28sp"
+                            android:textColor="#f1f1f1"
+                            android:fontFamily="@font/notosans_bold" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Critic: "
+                            android:textSize="20sp"
+                            android:textColor="#000"
+                            android:fontFamily="@font/notosans_bold" />
+
+                        <TextView
+                            android:id="@+id/criticGlobal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text=""
+                            android:textSize="28sp"
+                            android:textColor="#f1f1f1"
+                            android:fontFamily="@font/notosans_bold" />
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Cases/Mill"
+                            android:textSize="16sp"
+                            android:textColor="#000"
+                            android:fontFamily="@font/notosans_bold" />
+
+                        <TextView
+                            android:id="@+id/casesPerMillion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text=""
+                            android:textSize="20sp"
+                            android:textColor="#f1f1f1"
+                            android:fontFamily="@font/notosans_bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" Deaths/Mill"
+                            android:textSize="16sp"
+                            android:textColor="#000"
+                            android:fontFamily="@font/notosans_bold" />
+
+                        <TextView
+                            android:id="@+id/deathPerMillion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text=""
+                            android:textSize="20sp"
+                            android:textColor="#f1f1f1"
+                            android:fontFamily="@font/notosans_bold" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card3"
@@ -78,7 +288,5 @@
             android:layout_height="160dp"/>
 
     </LinearLayout>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
