--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -21,11 +21,9 @@
 
 
     <Button
-        android:background="@drawable/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        android:textColor="@color/white"
+        android:background="@drawable/goback"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,11 +31,15 @@
         />
 
     <Switch
-        android:id="@+id/switch1"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:id="@+id/switch_online"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textSize="19sp"
+        android:textSize="22sp"
+        android:text="Online"
+        android:fontFamily="@font/notosans_regular"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -67,12 +69,15 @@
         />
 
     <Switch
-        android:id="@+id/switch2"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:id="@+id/switch_dark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="350dp"
+        android:text="Light mode"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:textColor="@color/black"
-        android:textSize="19sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
