--- a/app/src/main/res/drawable/rectangle.xml
+++ b/app/src/main/res/drawable/rectangle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <gradient android:startColor="@color/cyan" android:endColor="@color/teal_200"></gradient>
+    <gradient android:gradientRadius="40dp" android:startColor="#36bb75" android:endColor="#25b9ff"></gradient>
 
 </shape>
