--- a/app/src/main/res/layout/fragment_diagnostic.xml
+++ b/app/src/main/res/layout/fragment_diagnostic.xml
@@ -40,7 +40,7 @@
         android:id="@+id/first_stade"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="90dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:elevation="20dp"
@@ -65,7 +65,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:textSize="16sp"
-                android:text="   You are ok? Everything is ok?"
+                android:paddingStart="10dp"
+                android:text="You are ok? Everything is ok?"
                 android:textColor="#FFF"/>
         </LinearLayout>
 
@@ -101,7 +102,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:textSize="15sp"
-                android:text="  You think you are sick? Maybe Corona? Stay home!"
+                android:paddingStart="10dp"
+                android:text="You think you are sick? Maybe Corona? Stay home!"
                 android:textColor="#FFF"/>
 
         </LinearLayout>
@@ -135,7 +137,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text="   You have corona virus! Stay quarantine mode"
+                android:paddingStart="10dp"
+                android:text="You have corona virus! Stay quarantine mode"
                 android:textSize="16sp"
                 android:textColor="#FFF"/>
 
@@ -147,7 +150,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/last_stade"
+        android:id="@+id/donnate"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
@@ -181,9 +184,6 @@
 
 
     </RelativeLayout>
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
