--- a/app/src/main/res/layout/fragment_diagnostic.xml
+++ b/app/src/main/res/layout/fragment_diagnostic.xml
@@ -28,7 +28,8 @@
         android:layout_height="wrap_content"
         android:text="My personal doctor"
         android:textColor="#FFF"
-        android:textSize="35sp"
+        android:textSize="32sp"
+        android:textAllCaps="true"
         android:fontFamily="@font/notosans_bold"
         android:layout_marginTop="80dp"
         android:textAlignment="center"
