Refactore the code and correct strings

--- a/app/src/main/res/layout/fragment_donnate.xml
+++ b/app/src/main/res/layout/fragment_donnate.xml
@@ -21,7 +21,7 @@
         android:layout_height="400dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="The donor's way is as follows"
+        android:text="@string/the_donor_s_way_is_as_follows"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="220dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="Address: Str. Dr. Caracas Constantin no. 2-8, Sector 1, Bucharest"
+        android:text="@string/address_str_dr_caracas_constantin_no_2_8_sector_1_bucharest"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,8 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="300dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="Tel: 031.405.36.60    031.405.36.61   031.405.36.62
-\n Mobile: 0745 34 32 35"
+        android:text="@string/tel_031_405_36_60_031_405_36_61_031_405_36_62_n_mobile_0745_34_32_35"
         android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="370dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="E-mail: ctsmb@b.astral.ro"
+        android:text="@string/e_mail_ctsmb_b_astral_ro"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="410dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="Donor reception program: M-F / 7.30-13.30"
+        android:text="@string/donor_reception_program_m_f_7_30_13_30"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
