--- a/app/src/main/res/layout/fragment_first_stade.xml
+++ b/app/src/main/res/layout/fragment_first_stade.xml
@@ -21,7 +21,7 @@
         android:layout_height="400dp"
         android:layout_marginTop="13dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="Some advice for protect yourself to coronavirus"
+        android:text="@string/some_advice_for_protect_yourself_to_coronavirus"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
@@ -33,11 +33,11 @@
         android:id="@+id/advice1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="220dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="Wash your hands often; use soap and water or alcohol-based hand sanitizer;"
+        android:text="@string/wash_your_hands_often_use_soap_and_water_or_alcohol_based_hand_sanitizer"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,11 +48,11 @@
         android:id="@+id/advice2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
-        android:fontFamily="@font/notosans_bold"
-        android:text="Wear a mask when physical distance is not possible;"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/notosans_bold"
+        android:text="@string/wear_a_mask_when_physical_distance_is_not_possible"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,11 +63,11 @@
         android:id="@+id/advice3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="370dp"
-        android:fontFamily="@font/notosans_bold"
-        android:text="Do not touch your eyes, nose or mouth;"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="370dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/notosans_bold"
+        android:text="@string/do_not_touch_your_eyes_nose_or_mouth"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,11 +78,11 @@
         android:id="@+id/advice4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="430dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="430dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="When you cough or sneeze, cover your nose and mouth with an elbow crease or a napkin"
+        android:text="@string/when_you_cough_or_sneeze_cover_your_nose_and_mouth_with_an_elbow_crease_or_a_napkin"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,11 +93,11 @@
         android:id="@+id/advice5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="520dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="520dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="Stay home if you don't feel well"
+        android:text="@string/stay_home_if_you_don_t_feel_well"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,17 +108,15 @@
         android:id="@+id/advice6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="560dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="560dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/notosans_bold"
-        android:text="If you have a fever, cough and difficulty breathing, consult a doctor"
+        android:text="@string/if_you_have_a_fever_cough_and_difficulty_breathing_consult_a_doctor"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
