--- a/app/src/main/res/layout/fragment_diagnostic.xml
+++ b/app/src/main/res/layout/fragment_diagnostic.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.base.DiagnosticFragment"
-    android:background="#FFF">
+    android:background="#FFF"
+    tools:context=".ui.base.DiagnosticFragment">
 
     <ImageView
-        android:src="@drawable/rectangle"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:src="@drawable/rectangle"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/goBack"
@@ -20,33 +20,33 @@
         android:layout_margin="10dp"
         android:background="@drawable/goback"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/doctor_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My personal doctor"
+        android:layout_marginTop="80dp"
+        android:fontFamily="@font/notosans_bold"
+        android:text="@string/my_personal_doctor"
+        android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="#FFF"
         android:textSize="32sp"
-        android:textAllCaps="true"
-        android:fontFamily="@font/notosans_bold"
-        android:layout_marginTop="80dp"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:id="@+id/first_stade"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginTop="90dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="10dp"
+        android:background="@color/cyan"
         android:elevation="20dp"
         android:textAlignment="center"
-        android:background="@color/cyan"
         app:layout_constraintTop_toBottomOf="@+id/doctor_tv">
 
         <LinearLayout
@@ -57,20 +57,18 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@drawable/first_stade"
                 android:layout_gravity="center_vertical"
-                />
+                android:background="@drawable/first_stade" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:textSize="16sp"
                 android:paddingStart="10dp"
-                android:text="You are ok? Everything is ok?"
-                android:textColor="#FFF"/>
+                android:text="@string/you_are_ok_everything_is_ok"
+                android:textColor="#FFF"
+                android:textSize="16sp" />
         </LinearLayout>
-
 
 
     </RelativeLayout>
@@ -79,11 +77,11 @@
         android:id="@+id/second_stade"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:elevation="20dp"
         android:background="#FFA500"
+        android:elevation="20dp"
         app:layout_constraintTop_toBottomOf="@+id/first_stade">
 
         <LinearLayout
@@ -94,18 +92,17 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@drawable/second_state"
                 android:layout_gravity="center_vertical"
-                />
+                android:background="@drawable/second_state" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:textSize="15sp"
                 android:paddingStart="10dp"
-                android:text="You think you are sick? Maybe Corona? Stay home!"
-                android:textColor="#FFF"/>
+                android:text="@string/you_think_you_are_sick_maybe_corona_stay_home"
+                android:textColor="#FFF"
+                android:textSize="15sp" />
 
         </LinearLayout>
     </RelativeLayout>
@@ -114,12 +111,12 @@
         android:id="@+id/third_stade"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
+        android:background="#FF0000"
         android:elevation="20dp"
         android:textAlignment="center"
-        android:background="#FF0000"
         app:layout_constraintTop_toBottomOf="@+id/second_stade">
 
         <LinearLayout
@@ -130,23 +127,19 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@drawable/third_stade"
                 android:layout_gravity="center_vertical"
-                />
+                android:background="@drawable/third_stade" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
-                android:text="You have corona virus! Stay quarantine mode"
-                android:textSize="16sp"
-                android:textColor="#FFF"/>
+                android:text="@string/you_have_corona_virus_stay_quarantine_mode"
+                android:textColor="#FFF"
+                android:textSize="16sp" />
 
         </LinearLayout>
-
-
-
 
     </RelativeLayout>
 
@@ -154,12 +147,12 @@
         android:id="@+id/donnate"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
+        android:background="#48D1CC"
         android:elevation="20dp"
         android:textAlignment="center"
-        android:background="#48D1CC"
         app:layout_constraintTop_toBottomOf="@+id/third_stade">
 
         <LinearLayout
@@ -170,21 +163,18 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="50dp"
-                android:background="@drawable/exclamation"
                 android:layout_gravity="center_vertical"
-                />
+                android:background="@drawable/exclamation" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Help humanity donnating blood! \n Someone needs you"
-                android:textSize="16sp"
-                android:textColor="#FFF"/>
+                android:text="@string/help_humanity_donnating_blood_n_someone_needs_you"
+                android:textColor="#FFF"
+                android:textSize="16sp" />
         </LinearLayout>
 
-
     </RelativeLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
